--- a/[4] top_Tester.ipynb
+++ b/[4] top_Tester.ipynb
@@ -246,6 +246,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dbb8fde1",
+   "metadata": {},
+   "source": [
+    "we can use ttest here because of Analyzer results showing general normality"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "89bc3bb5",
