--- a/[6] Tester.ipynb
+++ b/[6] Tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 2,
    "id": "9d9fec4f",
    "metadata": {
     "execution": {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 3,
    "id": "dc636f27",
    "metadata": {
     "execution": {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 4,
    "id": "db90de9e",
    "metadata": {
     "execution": {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 5,
    "id": "997a0fca",
    "metadata": {
     "papermill": {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 6,
    "id": "addc53a5",
    "metadata": {
     "papermill": {
@@ -386,6 +386,107 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d6d82d94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No significant repetition differences found when merged across animals per (date, experiment).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ...existing code...\n",
+    "\n",
+    "def test_repetition_effect_merged_experiment(df, variables, max_reps=5, alpha=0.05):\n",
+    "    \"\"\"\n",
+    "    Merge across animals and test repetition effects per (date, experiment).\n",
+    "    Returns DataFrame with significant results (p < alpha) for each date/experiment/variable.\n",
+    "    \"\"\"\n",
+    "    import ast\n",
+    "    import numpy as np\n",
+    "    import pandas as pd\n",
+    "    from scipy.stats import f_oneway, kruskal, shapiro\n",
+    "\n",
+    "    results = []\n",
+    "    for (date, experiment), group in df.groupby(['date', 'experiment']):\n",
+    "        for var in variables:\n",
+    "            # parse list-like cells, keep only rows that contain lists of repetitions\n",
+    "            vals = group[var].apply(lambda x: ast.literal_eval(x) if isinstance(x, str) and x.startswith('[') else x)\n",
+    "            list_rows = vals[vals.apply(lambda x: isinstance(x, list) and len(x) > 1)]\n",
+    "            if list_rows.empty:\n",
+    "                continue\n",
+    "\n",
+    "            # determine how many repetition positions to test (limit by max_reps)\n",
+    "            min_len = min(list_rows.apply(len))\n",
+    "            min_len = min(min_len, max_reps)\n",
+    "\n",
+    "            # build groups for each repetition index (pooled across animals)\n",
+    "            rep_groups = []\n",
+    "            for i in range(min_len):\n",
+    "                group_vals = list_rows.apply(lambda x: x[i] if len(x) > i else np.nan).dropna()\n",
+    "                if len(group_vals) > 1:\n",
+    "                    rep_groups.append(group_vals.values)\n",
+    "\n",
+    "            if len(rep_groups) < 2:\n",
+    "                continue\n",
+    "\n",
+    "            # decide normality across repetition groups (if any group of length>2 fails Shapiro => non-normal)\n",
+    "            normal = True\n",
+    "            for g in rep_groups:\n",
+    "                if len(g) > 2:\n",
+    "                    _, p_sw = shapiro(g)\n",
+    "                    if p_sw < 0.05:\n",
+    "                        normal = False\n",
+    "                        break\n",
+    "\n",
+    "            # run appropriate test\n",
+    "            if normal:\n",
+    "                stat, p = f_oneway(*rep_groups)\n",
+    "                test_type = 'anova'\n",
+    "            else:\n",
+    "                stat, p = kruskal(*rep_groups)\n",
+    "                test_type = 'kruskal'\n",
+    "\n",
+    "            if p < alpha:\n",
+    "                mean_diff = np.mean(rep_groups[0]) - np.mean(rep_groups[-1])\n",
+    "                vals1 = rep_groups[0]\n",
+    "                vals2 = rep_groups[-1]\n",
+    "                pooled_std = ((np.std(vals1, ddof=1) ** 2 + np.std(vals2, ddof=1) ** 2) / 2) ** 0.5\n",
+    "                effect_strength = mean_diff / pooled_std if pooled_std != 0 else np.nan\n",
+    "                results.append({\n",
+    "                    'date': date,\n",
+    "                    'experiment': experiment,\n",
+    "                    'variable': var,\n",
+    "                    'stat': stat,\n",
+    "                    'p': p,\n",
+    "                    'test': test_type,\n",
+    "                    'mean_diff': mean_diff,\n",
+    "                    'effect_strength': effect_strength\n",
+    "                })\n",
+    "\n",
+    "    return pd.DataFrame(results)\n",
+    "\n",
+    "\n",
+    "# run merged-per-experiment repetition test\n",
+    "repetition_effects_merged_exp = test_repetition_effect_merged_experiment(dfs['RESULTS'], variables)\n",
+    "\n",
+    "if repetition_effects_merged_exp.empty:\n",
+    "    print(\"No significant repetition differences found when merged across animals per (date, experiment).\")\n",
+    "else:\n",
+    "    sig_repetition_effects_merged = repetition_effects_merged_exp[repetition_effects_merged_exp['p'] < 0.05]\n",
+    "    print(\"Significant repetition differences (merged across animals) for date / experiment / variable:\")\n",
+    "    print(sig_repetition_effects_merged[['date', 'experiment', 'variable', 'mean_diff', 'effect_strength', 'test', 'p']])\n",
+    "    sig_repetition_effects_merged.to_excel(os.path.join(output_dir, \"REPETITION_EFFECTS_MERGED_EXPERIMENT_SIGNIFICANT.xlsx\"), index=False)\n",
+    "\n",
+    "# ...existing code..."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3b8c2642",
    "metadata": {
@@ -438,8 +539,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 8,
    "id": "98144701",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No significant intratrial differences found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from scipy.stats import linregress\n",
+    "\n",
+    "df = dfs['RESULTS_MERGED']\n",
+    "variables = [v for v in df.columns if v not in ['animal', 'experiment', 'sex', 'date']]\n",
+    "trend_results = []\n",
+    "\n",
+    "for (animal, experiment, date), group in df.groupby(['animal', 'experiment', 'date']):\n",
+    "    order = range(len(group))\n",
+    "    for var in variables:\n",
+    "        vals = group[var].dropna()\n",
+    "        if len(vals) > 1:\n",
+    "            slope, intercept, r, p, _ = linregress(order[:len(vals)], vals)\n",
+    "            start = vals.iloc[0]\n",
+    "            end = vals.iloc[-1]\n",
+    "            percent_change = ((end - start) / start) * 100 if start != 0 else None\n",
+    "            trend_results.append({\n",
+    "                'animal': animal,\n",
+    "                'experiment': experiment,\n",
+    "                'date': date,\n",
+    "                'variable': var,\n",
+    "                'slope_per_trial': slope,\n",
+    "                'r': r,\n",
+    "                'p': p,\n",
+    "                'direction': 'increase' if slope > 0 else 'decrease' if slope < 0 else 'none',\n",
+    "                'percent_change': percent_change\n",
+    "            })\n",
+    "\n",
+    "trend_df = pd.DataFrame(trend_results)\n",
+    "if not trend_df.empty and 'p' in trend_df.columns:\n",
+    "    trend_df = trend_df[trend_df['p'] < 0.05].reset_index(drop=True)  # Only keep significant results\n",
+    "else:\n",
+    "    print(\"No significant intratrial differences found.\")\n",
+    "    trend_df = pd.DataFrame()  # Empty DataFrame\n",
+    "trend_df.to_excel(os.path.join(output_dir, \"INTRATRIAL_DIFFERENCES_SIGNIFICANT_ANIMAL_EXPERIMENT.xlsx\"), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ce9e7bd0",
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 9,
    "id": "f5cf8e21",
    "metadata": {
     "papermill": {
@@ -847,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 10,
    "id": "c00780de",
    "metadata": {},
    "outputs": [
@@ -969,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 11,
    "id": "22cbb63f",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 12,
    "id": "3fd75693",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 13,
    "id": "09970ab5",
    "metadata": {},
    "outputs": [
@@ -1193,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 14,
    "id": "a5546a86",
    "metadata": {},
    "outputs": [
@@ -1317,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 15,
    "id": "aa87b0c8",
    "metadata": {},
    "outputs": [
@@ -1436,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 16,
    "id": "369cc9d5",
    "metadata": {},
    "outputs": [
@@ -1550,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 17,
    "id": "7e3eefa0",
    "metadata": {},
    "outputs": [
@@ -1676,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 18,
    "id": "87777f44",
    "metadata": {
     "papermill": {
@@ -1756,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 19,
    "id": "4156698d",
    "metadata": {
     "papermill": {
@@ -1808,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 20,
    "id": "87b3a0d7",
    "metadata": {
     "papermill": {
@@ -1859,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 21,
    "id": "5bf9c43b",
    "metadata": {
     "papermill": {
@@ -1959,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 22,
    "id": "1689bb91",
    "metadata": {},
    "outputs": [
@@ -2088,7 +2241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 23,
    "id": "3e49d90a",
    "metadata": {},
    "outputs": [
@@ -2240,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 24,
    "id": "0a56060f",
    "metadata": {},
    "outputs": [
@@ -2390,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 25,
    "id": "1b05ecbc",
    "metadata": {
     "papermill": {
@@ -2517,7 +2670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 26,
    "id": "1d416663",
    "metadata": {},
    "outputs": [
