--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
 TODO:
 
-- rewrite abstract and introduction
-- smooth out discussion
-- fix Lauer references (2018 not 17?)
+- rewrite things
+- add citations to methods
 - is the box from TSE too, if so which one?
-- rename rec order to animal? 
-- add comparison souces for hit rates
+- unify plots 
+- fix plot textsize
+- unify descriptions
+- add prepulse length to table
