--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
 TODO:
 
-- write guide (120 trials = 40 minutes)
+- finish guide
+- smart repetition detecting
+- remove unnecessary figures
+- no significance??
