--- a/Resources/Guide.tex
+++ b/Resources/Guide.tex
@@ -149,7 +149,7 @@
 	
 	If you wish to simply test the notebook using the exemplary data, click \texttt{Run All}. If everything is set up correctly, the Output folder should now contain the same files as the \texttt{Exemplary Output} folder. 
 	
-	To use your own data, you need to first paste your own data folder containing the CSV files of all measurements into the main \texttt{Startle Response Analysis} folder. Then, navigate to the \texttt{Settings} section at the top and enter your data folder name into \texttt{input\_folder}. If no ßtexttt{input\_folder} is given, the program defaults to using the example data. Lastly, change settings accordingly to suit your data. This includes setting \texttt{Repetition Count} to the number of repetitions per trial in your data as well as updating \texttt{sex\_dict} and \texttt{startle\_times}. You can now run all cells and examine the output.
+	To use your own data, you need to first paste your own data folder containing the CSV files of all measurements into the main \texttt{Startle Response Analysis} folder. Then, navigate to the \texttt{Settings} section at the top and enter your data folder name into \texttt{input\_folder}. If no \texttt{input\_folder} is given, the program defaults to using the example data. Lastly, change settings accordingly to suit your data. This includes setting \texttt{Repetition Count} to the number of repetitions per trial in your data as well as updating \texttt{sex\_dict} and \texttt{startle\_times}. You can now run all cells and examine the output.
 	
 	\newpage
 	\section{Troubleshooting}
@@ -159,7 +159,7 @@
 	\end{itemize}
 	\subsection{Software}
 	\begin{itemize}
-		\item FileNotFoundError when running example data: check if \texttt{input\_folder} is correctly set to \texttt{""} and that the \texttt{example\_folder} matches the name of your downloaded example data.
+		\item \texttt{FileNotFoundError} when running example data: check if \texttt{input\_folder} is correctly set to \texttt{""} and that the \texttt{example\_folder} matches the name of your downloaded example data.
 	\end{itemize}
 	
 \end{document}
